testdata/baselines/reference/submodule/conformance/enumTagOnExports2.errors.txt
enumTagOnExports.js(2,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== enumTagOnExports.js (1 errors) ====
    /** @enum {string} */
    module.exports = {};
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    